style.css
/* ... */
.navbar-toggle{
	display: block;
	float: none;
	position: fixed;
	top: 50px;
	left: 25px;
	z-index: 99999;
	border: 3px solid #fff;
	margin: 0;
	/*border-right: 3px solid #fff;*/
}

.icon-bar{
	background: #fff;
}
.lyd-nav {
	position: fixed;
	width: 26%;
	background: rgba(0,0,0,0.75);
	height: 500px;
	z-index: 999999;
	-webkit-transition: all .5s;
	transition: all .5s;
	color: #999;
	left: -26%;
	/*display: none;*/
}
.close-nav{
	float: right;
	margin: 0 10px 0 0;
	font-size: 20px;
	cursor: pointer;
}
.lyd-nav h2{
	width: 100%;
	text-align: center;
	margin-top: 50px;

}
.lyd-nav h2 a{
	color: #999;
	font-family: 'webfontregular';
}
.lyd-nav ul li a{
	color: #999;
	font-size: 20px;
	font-family: 'Open Sans';

}
.lyd-nav a:hover,
.lyd-nav h2 a:hover{
	color: #fff;

}
.lyd-nav ul {
	z-index: 9999;
}
.lyd-nav ul li {
	list-style: none;
	margin: 10px 0;
	text-transform: capitalize;
	cursor: pointer;
}
.lyd-nav ul li:hover {
	color: #fff;
	text-decoration: underline;
}
/*******************  2.0 - Learn More *******************/
.about-title{
	color: #518231;
	font-family: 'Oswald';
	margin: 0 0 10px;
	padding-top: 20px;
}
.page-template-page-templatespage-about-php main{
	background-image: url('img/lines.svg');
	background-color: #518231
}
#about-page-content{
	width: 100%;
	/*height: 500px; */
	margin-top: -75px;
	position: relative;
}
#about-page-content a img{
	float: right;
	/*margin: 10px 0 10px 10px;*/
	padding: 10px;
}
#about-page-content p{
	font-family: 'Open Sans';
	color: #265C03;
}
#about-page-content #page-container{
	width: 1020px;
	border-top: 5px solid #518231;
	padding-bottom: 5px;
	/*background-image: url('img/lines2.svg');*/

	background-color: #F4FFED;
	box-shadow: 1px 2px 1px #333, -1px 2px 1px #333;
	/*height: 500px;*/
	margin: 0 auto;
	position: relative;
	z-index: 999;
}
#about-page-content #page-container #page-content{
	width: 960px;
	/*height: 500px;*/
	margin: 0 auto;
}
#learn-more #page-content > div{
	min-height: 420px;
}
#learn-more + footer > div{
	/*margin-top: -70px;*/
}

#learn-more .box-shadow{
	height: 89.9%
}
#learn-more + footer{
	margin-top: -20px !important;
}
/*******************  3.0 - Getting Hear *******************/
#getting-container .col-md-4 ul{
	background: none repeat scroll 0 0 #7f9d6c;
	box-shadow: 0 1px 3px #333;
}
#getting-container .col-md-8{
	margin-bottom: 50px;
}
#getting-container .col-md-4 .textwidget > li {
  font-family: 'Open Sans';
  list-style: outside none none;
  padding: 5px;
  color: #fff;
}
#getting-container .col-md-4{
	margin: 0;
}
#getting-container h1{
	color: #518231;
	font-family: 'Oswald';
}
#getting-container ul{
	padding: 0;
	margin: 0;
}
#lyd-getting-here h1{
	line-height: 265px; 
}
#getting-container{
	background-image: url("img/lines.svg");
	background-repeat: repeat;
	border-top: 5px solid #518231;
	box-shadow: 0 0 5px #333 inset;

}
#lyd-map{
	height: 100%;
	width: 100%;
}
#map-container{
	height: 400px;
	width: 960px;
	margin: 0 auto;
	position: relative;
	border: 1px solid #fff;
	overflow: hidden;

}
#map-decp{
	position: absolute;
	/*bottom: -115px;*/
	bottom: -65px;
	right: 0;
	height: 100px;
	width: 300px;
	/*background-color: #7f9d6c;*/
	border-radius: 3px;
	background-image: url('img/lines.svg');
	cursor: pointer;
	box-shadow: 0 1px 3px #333;
	-webkit-transition: all .5s ease; 
    -moz-transition: all .5s ease; 
    -o-transition: all .5s ease; 
    -ms-transition: all .5s ease; 
    transition: all .5s ease;
}
#map-decp:hover{
	bottom: 0;
}
#map-decp h4{
	font-family: 'Oswald';
	color: #518231;
	margin-left: 10px;
}
#map-decp #text-2 .textwidget{
	font-family: 'Open Sans';
	margin-left: 15px;
	color: #265C03;
} 
/*******************  4.0 - Contact *******************/
#Contact form h3{
	text-align: center;
}
#Contact form p img{
	text-align: center;
	margin-bottom: 10px;
}
#Contact .box-shadow{
	height: 87.5%;
}
#Contact{
	background-image: url('img/lines.svg');

}
.lyd-nav #contact-us{
	background: transparent;
}
/*******************  5.0 - Reserve Section *******************/
#camp-map div{
	height: 500px;
	width: 95%;
	background-color: #033;
	margin: 25px auto;
}
.lyd-camp-page{
	height: 550px;
	background-image: url('img/lines.svg');
	background-color: #518231;
	box-shadow: 0 0 5px #333 inset;
}
.lyd-camp-page .row{
	position: relative;
}
#camp-reserve{
	height: 550px;
}
.campsite{
	font-family: 'Ubuntu';
	font-size: 20px;
	cursor: pointer;
	transition: all .15s;
}
.campsite:hover{
	fill: #fff;
	text-decoration: underline;
}
.camp-available{
	fill: #0f0;
}
.camp-booked{
	fill: #f00;
}
.camp-waiting{
	fill: #FF8E00;
}

.campsite-input{
	display: table;
	width: 100%;
	/*margin-bottom: 5px;*/
}

.campsite-input#camp-from,
.campsite-input#camp-to{
	width: 48%;
	display: inline-block;
	float: left;
}
.clear{
	clear: both;
}
.campsite-input#camp-to{
	float: right;

}
.reserve-btn-2{
	padding: 5px 10px;
	background-color: #617e4e;
	border-radius: 3px;
	width: 30%;
	margin: 0 auto;
	cursor: pointer;
	text-align: center;
	-webkit-transition: all .5s;
	transition: all .5s;
	box-shadow: 0 1px 3px #333;
	color: #ccc;

}
.reserve-btn-2:hover{
	box-shadow: 0 1px 3px #333 inset;
	color: #fff;

}
.camp-ip-grp{
	margin-bottom: 10px;
	text-align: center;
}
#camp-number{
	margin-top: 10px;
}
/*******************  6.0 - Photo Gallery *******************/
.lyd-modal-img{
	height: 100%;
	width: 100%;
	background-size: cover;
	background-position: center;
}
.modal-body{
	height: 500px;
	width: 100%;

}
.lyd-photo{
	height: 200px;
	width: 30%;
	list-style: none;
	display: inline-block;
	margin: 10px;
	position: relative;
	overflow: hidden;
	cursor: pointer;

}
#lyd-photos{
	width: 100%;
	background: #7f9d6c;
	height: 100%;
	text-align: center;
	margin: 0;
	padding: 0;
	box-shadow: 0 1px 3px #333;

}
/* ... */

